Version 4.0.5
- Made -x flag disable LF->CR+LF translation on serial port
- Print errors for function declared twice
- Fixed static function declarations in C so that declarations in different files do not conflict
- Re-arranged internal code to make it possible to distinguish C vs C++ or spin1 vs spin2

Version 4.0.4
- Implemented top level __asm in C
- Implemented Spin compatible __pasm in C
- Implemented asm shared in BASIC
- Fixed some namespace conflicts between BASIC and C
- Fixed a typo in stdlib.h which caused conflict with math.h
- Added auto baud rate detection capability to SmartSerial
- Fixed an error in switch statement expressions in BASIC
- Fixed the C _pinw function
- Fixed MOD operator in BASIC to work like FastBASIC.
- Printed an error for RES after ORGH
- Allow $ expressions inside RES
- Allow $ to start a hex number in BASIC
- Revert clkfreq and clkmode in BASIC to their old behavior

Version 4.0.3
- Implemented C++ references like "int &c"
- Implemented passing structs by value in C
- Implemented GCC compatible statement expressions
- Added __builtin_expect (does nothing for now)
- Fixed some symbol resolution issues for functions called via pointers
- Fixed incorrect string comparisons in C library
- Fixed incorrect type inference in Spin functions which contain cases
- Fixed an uninitialized variable problem with some large programs
- Made sure case_fast actually does produce a jump table
- Added offsetof() macro and fixed internal error which stopped it from working
- Made -2b the default P2 hardware instead of -2a.

Version 4.0.2
- Fixed Spin quit inside of case
- Optimized sequences of jumps (such as produced by case)
- Fixed floating point comparison bug
- Fixed missing declaration of _basic_print_integer internally

Version 4.0.1
- Added initialization of local arrays and structs in C
- Fixed a static name declaration bug in C
- Fixed floating point output of printf to match standard C

Version 4.0.0