@@ -3,6 +3,7 @@ Version 4.0.5
 - Print errors for function declared twice
 - Fixed static function declarations in C so that declarations in different files do not conflict
 - Re-arranged internal code to make it possible to distinguish C vs C++ or spin1 vs spin2
+- Fixed enum declaration scope in C
 
 Version 4.0.4
 - Implemented top level __asm in C
